<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ItemPickCardViewStyle"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    >

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/reagName" />

            <TextView
                android:id="@+id/tv_reagName"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/specification" />

            <TextView
                android:id="@+id/tv_reagent_specification"
                style="@style/ItemPickdetailRightStyle"

                />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/danwei" />

            <TextView
                android:id="@+id/tv_reagent_unit"
                style="@style/ItemPickdetailRightStyle"

                />
        </LinearLayout>


        <LinearLayout
            style="@style/ItemPickdetailStyle"
            android:visibility="gone">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/batchNo" />

            <TextView
                android:id="@+id/tv_batchNo"
                style="@style/ItemPickdetailRightStyle"

                />
        </LinearLayout>

        <LinearLayout
            style="@style/ItemPickdetailStyle"
            android:visibility="gone">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/expireDate" />

            <TextView
                android:id="@+id/tv_expireDate"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/maker" />

            <TextView
                android:id="@+id/tv_maker"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>




        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/supplier" />

            <TextView
                android:id="@+id/tv_supplier"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle"
            android:visibility="gone"
            >

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/tiaoma" />

            <EditText
                android:id="@+id/tv_tiaoma"
                style="@style/ItemPickdetailRightEnableStyle" />
        </LinearLayout>
        <LinearLayout
            style="@style/ItemPickdetailStyle"
            android:visibility="gone">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/xiajiacunwei" />

            <TextView style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>
        <LinearLayout style="@style/ItemPickdetailStyle"
            android:visibility="gone">
            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/kehu" />

            <TextView
                android:id="@+id/tv_kehu"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/shuliang" />

            <TextView
                android:id="@+id/tv_quantity"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_save"
            android:visibility="gone"
            style="@style/ItemPickSaveBtnStyle" />

    </com.zhy.android.percent.support.PercentLinearLayout>
</android.support.v7.widget.CardView>
