<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ItemPickCardViewStyle"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    >

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout style="@style/ItemPickdetailStyle">
            <TextView
                style="@style/ItemDetailLeftStyle_Large"
                android:text="@string/reagName" />

            <TextView
                android:id="@+id/tv_reagName"
                style="@style/ItemDetailRightStyle_Large" />
        </LinearLayout>


        <LinearLayout style="@style/ItemPickdetailStyle">
            <TextView
                style="@style/ItemDetailLeftStyle_Large"
                android:text="@string/batchNo" />

            <TextView
                android:id="@+id/tv_batchNo"
                style="@style/ItemDetailRightStyle_Large"

                />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemDetailLeftStyle_Large"
                android:text="@string/danwei"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/tv_reagent_unit"
                style="@style/ItemDetailRightStyle_Large"

                />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">
            <TextView
                style="@style/ItemDetailLeftStyle_Large"
                android:text="@string/specification" />

            <TextView
                android:id="@+id/tv_reagent_specification"
                style="@style/ItemDetailRightStyle_Large"

                />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">
            <TextView
                style="@style/ItemDetailLeftStyle_Large"
                android:text="@string/expire_date" />

            <TextView
                android:id="@+id/tv_expireDate"
                style="@style/ItemDetailRightStyle_Large" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">
            <TextView
                style="@style/ItemDetailLeftStyle_Large"
                android:text="@string/maker" />

            <TextView
                android:id="@+id/tv_maker"
                style="@style/ItemDetailRightStyle_Large" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">
            <TextView
                style="@style/ItemDetailLeftStyle_Large"
                android:text="@string/supplier" />

            <TextView
                android:id="@+id/tv_supplier"
                style="@style/ItemDetailRightStyle_Large" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">
            <TextView
                style="@style/ItemDetailLeftStyle_Large"
                android:text="@string/reagent_stock_total" />

            <TextView
                android:id="@+id/tv_reagent_number"
                style="@style/ItemDetailRightStyle_Large" />
        </LinearLayout>


    </com.zhy.android.percent.support.PercentLinearLayout>
</android.support.v7.widget.CardView>
