<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ItemPickCardViewStyle"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    >

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/preinbill_no" />

            <TextView
                android:id="@+id/tv_preinbill_code"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>


        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/supplier" />

            <TextView
                android:id="@+id/tv_supplier"
                style="@style/ItemPickdetailRightStyle"

                />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/operationDate" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/preinbill_creator" />

            <TextView
                android:id="@+id/tv_preinbill_creator"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/preinbill_status" />

            <TextView
                android:id="@+id/tv_preinbill_status"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="end"
            >

            <Button
                android:id="@+id/btn_to_in"
                style="@style/ItemPickSaveBtnStyle"
                android:text="@string/btn_in_click"
                android:background="@drawable/btn_select_red"
                />

            <Button
                android:id="@+id/btn_detail"
                android:layout_marginStart="15dp"
                style="@style/ItemPickSaveBtnStyle"
                android:text="@string/btn_to_scan"
                />

        </LinearLayout>


    </com.zhy.android.percent.support.PercentLinearLayout>
</android.support.v7.widget.CardView>
