<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ItemPickCardViewStyle"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    >

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/reagent_move_no" />

            <TextView
                android:id="@+id/tv_move_no"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>


        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/reagent_move_applicant" />

            <TextView
                android:id="@+id/tv_move_applicant"
                style="@style/ItemPickdetailRightStyle"

                />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/reagent_move_branch" />

            <TextView
                android:id="@+id/tv_move_branch"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/reagent_move_date" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/reagent_move_status" />

            <TextView
                android:id="@+id/tv_move_status"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_move"
            style="@style/ItemPickSaveBtnStyle"
            android:text="@string/btn_move"
            />

    </com.zhy.android.percent.support.PercentLinearLayout>
</android.support.v7.widget.CardView>
